--- a/assets/styles/stylesProfile.css
+++ b/assets/styles/stylesProfile.css
@@ -1,12 +1,23 @@
+/* Fuentes para todo el documento */
+html {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+/* Estilos para el body */
 body {
     background-color: #000000;
     overflow-x: hidden;
-    font-family: 'Montserrat', sans-serif;
-    font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
     color: white;
 }
 
+/* Estilos para los títulos */
+h1 {
+    color: white;
+    text-align: center;
+    font-family: 'Poppins';
+}
 
 /* Barra de navegación */
 .custom-navbar {
@@ -15,29 +26,22 @@ body {
     top: 0;
     z-index: 1;
 }
-
-.logo {
-    /* Estilo para el logo en la barra de navegación */
+.logo { /* Estilo para el logo en la barra de navegación */
     margin-left: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 150px;
     text-align: left;
 }
-
-.containerProfile {
-    /* Estilo para el contenedor del perfil en la barra de navegación */
+.containerProfile { /* Estilo para el contenedor del perfil en la barra de navegación */
     margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
-
-.perfil {
-    /* Estilo para la imagen de perfil en la barra de navegación */
+.perfil {   /* Estilo para la imagen de perfil en la barra de navegación */
     width: 45px;
     border-radius: 50%
 }
-
 /* Estilo para el menú de configuración */
 .config-menu {
     display: none;
@@ -50,17 +54,13 @@ body {
     border-radius: 5px;
     margin-right: 10px;
 }
-
-.config-menu ul {
-    /* Estilo para la lista del menú de configuración */
+.config-menu ul {   /* Estilo para la lista del menú de configuración */
     list-style: none;
     padding: 0;
     margin: 0;
     width: 260px;
 }
-
-.config-menu ul li {
-    /* Estilo para los items del menú de configuración */
+.config-menu ul li {    /* Estilo para los items del menú de configuración */
     padding: 10px;
     text-align: left;
     align-items: center;
@@ -70,9 +70,7 @@ body {
     border-radius: 5px;
     margin: 5px;
 }
-
-.config-menu ul li a {
-    /* Estilo para los links del menú de configuración */
+.config-menu ul li a {  /* Estilo para los links del menú de configuración */
     text-decoration: none;
     color: #ffffff;
     font-size: large;
@@ -87,10 +85,11 @@ body {
     margin-inline: 10px 30px;
 }
 
+
 /* Personal info */
 .contSuperior {
     margin-top: -55px;
-    height: 550px;
+    height: 575px;
     overflow: hidden;
     z-index: -1;
 }
@@ -106,17 +105,17 @@ body {
 }
 .contProfilePick {  /*Contenedor de la imagen de perfil*/
     position: absolute;
-    top: 350px;
+    top: 380px;
     left: 50px;
     z-index: 2;
 }
 .contProfilePick img {  /*Imagen de perfil*/
     border-radius: 50%;
-    width: 200px;
+    width: 190px;
 }
 .contNickname { /*Contenedor del nickname*/
     position: absolute;
-    top: 450px;
+    top: 460px;
     left: 260px;
     z-index: 2;
 }
@@ -127,36 +126,29 @@ body {
 }
 
 
-.row {
-    margin-top: 10px;
+.rowFather {
+    margin-top: 15px;
 }
-.containerJuegosLogros h2 {
+.colLeft {
+    padding-inline: 30px;
+}
+.containerJuegosLogros {
     margin-left: 50px;
 }
-.menuJuegos {
-    list-style-type: none;
-    padding: 0;
-    display: inline-block;
-    /* Muestra los elementos en línea */
-}
-
 .menuJuegos li {
-    display: inline-block;
-    /* Muestra los elementos en línea */
+    display: inline-block;  /* Muestra los elementos en línea */
+    padding: 0;
 }
-
 .juego {
     width: 180px;
     margin-inline: 20px;
 }
-
 .containerLogros {
     width: 180px;
     margin-top: -16px;
     margin-inline: 8px;
     justify-content: center;
 }
-
 .logro {
     margin: 0 6px;
     padding-inline: 0;
@@ -176,7 +168,6 @@ body {
 div.scrollmenu {
     overflow: auto;
     white-space: nowrap;
-    margin-left: 30px;
     margin-top: 10px;
 }
 
