--- a/assets/styles/contactanos.css
+++ b/assets/styles/contactanos.css
@@ -28,22 +28,29 @@ h1 {
     top: 0;
     z-index: 1;
 }
-.logo { /* Estilo para el logo en la barra de navegación */
+
+.logo {
+    /* Estilo para el logo en la barra de navegación */
     margin-left: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
     width: 150px;
     text-align: left;
 }
-.containerProfile { /* Estilo para el contenedor del perfil en la barra de navegación */
+
+.containerProfile {
+    /* Estilo para el contenedor del perfil en la barra de navegación */
     margin-right: 20px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
-.perfil {   /* Estilo para la imagen de perfil en la barra de navegación */
+
+.perfil {
+    /* Estilo para la imagen de perfil en la barra de navegación */
     width: 45px;
     border-radius: 50%
 }
+
 /* Estilo para el menú de configuración */
 .config-menu {
     display: none;
@@ -56,36 +63,49 @@ h1 {
     border-radius: 5px;
     margin-right: 10px;
 }
-.config-menu ul {   /* Estilo para la lista del menú de configuración */
+
+.config-menu ul {
+    /* Estilo para la lista del menú de configuración */
     list-style: none;
     padding: 0;
     margin: 0;
     width: 260px;
 }
-.config-menu ul li {    /* Estilo para los items del menú de configuración */
+
+.config-menu ul li {
+    /* Estilo para los items del menú de configuración */
     padding: 10px;
     text-align: left;
     align-items: center;
 }
-.config-menu ul li:hover {    /* color de fondo al pasar el ratón */
+
+.config-menu ul li:hover {
+    /* color de fondo al pasar el ratón */
     background-color: #e4252846;
     border-radius: 5px;
     margin: 5px;
 }
-.config-menu ul li a {  /* Estilo para los links del menú de configuración */
+
+.config-menu ul li a {
+    /* Estilo para los links del menú de configuración */
     text-decoration: none;
     color: #ffffff;
     font-size: large;
 }
-.config-menu ul li img{    /* Estilo para los iconos del menú de configuración */
+
+.config-menu ul li img {
+    /* Estilo para los iconos del menú de configuración */
     height: 20px;
     margin-bottom: 5px;
 }
-.config-menu ul hr {    /* color de fondo al pasar el ratón */
+
+.config-menu ul hr {
+    /* color de fondo al pasar el ratón */
     margin: 5px 0;
     border: solid 2px #000000;
     margin-inline: 10px 30px;
 }
+
 /*termiman estilos de navbar*/
 
 
@@ -98,25 +118,31 @@ h1 {
     border-radius: 30px;
     opacity: 0.8;
     padding: 10px 50px;
-    margin: 20px auto; 
+    margin: 20px auto;
 }
-#title-contact {    /* Estilo para el título del formulario */
+
+#title-contact {
+    /* Estilo para el título del formulario */
     font-weight: 600;
     font-size: 30px;
     text-align: center;
     color: #e42527;
     margin: 20px 0;
 }
-#input-comment {    /* Estilo para el input de comentario */
+
+#input-comment {
+    /* Estilo para el input de comentario */
     height: auto;
     min-height: 50px;
     padding: 30px 12px 16px 12px;
 }
-#btn-register { /* Estilo para el botón de enviar */
+
+#btn-register {
+    /* Estilo para el botón de enviar */
     margin: 20px 0;
 }
-.form-floating label {  /* Estilo para el label de los inputs */
+
+.form-floating label {
+    /* Estilo para el label de los inputs */
     color: black;
 }
-
-
