--- a/assets/styles/estilosDeDashBoard.css
+++ b/assets/styles/estilosDeDashBoard.css
@@ -3,7 +3,7 @@ html {
     font-family: 'Poppins', sans-serif;
 }
 body {
-    background-color: #000000ef;
+    background-color: #141414
 }
 
 /* Barra de navegación */
@@ -74,86 +74,3 @@ body {
 /*termiman estilos de navbar*/
 
 
-/* Estilos para los botones */
-
-button{
-    height: 30px;
-    text-align: center;
-}
-
-/* Estilos para las imágenes de perfil de amigos */
-.friend-img {
-    width: 50px; /* Ancho de las imágenes de perfil */
-    height: 50px; /* Altura de las imágenes de perfil */
-    margin-right: 10px; /* Espacio entre la imagen y el texto */
-    border: 2px solid #ccc; /* Borde alrededor de las imágenes */
-    border-radius: 50%; /* Bordes redondeados para que sean circulares */
-}
-
-/* Estilos para el contenedor de perfil */
-.containerProfile {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px; /* Espacio inferior entre el perfil y los botones */
-}
-
-/* Estilos para el nombre de usuario en el perfil */
-#profile-img {
-    width: 50px; /* Tamaño de la imagen de perfil */
-    height: 50px; /* Tamaño de la imagen de perfil */
-    border: 2px solid #ccc; /* Borde alrededor de la imagen de perfil */
-    border-radius: 50%; /* Bordes redondeados para que sea circular */
-    margin-right: 10px; /* Espacio entre la imagen de perfil y el nombre de usuario */
-}
-
-/* Estilos para los elementos de la lista de amigos */
-.dash-item {
-    margin-bottom: 10px; /* Espacio entre elementos de la lista */
-}
-
-.nick{  /*Estilos nombre de perdfil*/
-    color: #ffffff;
-}
-
-#menudash {
-    background-color: #000000; /* Color de fondo del navbar */
-    padding: 10px; /* Espacio interno del navbar */
-    width: 250px;
-    height: 100%;
-}
-
-
-#menudash ul li {
-    padding: 10px;
-    text-align: left;
-    align-items: center;
-    color: #ffffff;
-    font-family: 'Montserrat';
-}
-
-.dash-item a {
-    color: #8a8a8a;
-    font-family: 'Poppins';
-}
-
-.nav-link:hover {
-    color: #e42527; /* Cambia el color del texto del enlace a rojo al pasar el mouse sobre él */
-}
-
-
-#cuadro-publicacion {
-    color: #8a8a8a;
-    text-align: right;
-    align-items: center;
-    margin-right: 40px;
-    margin-top: 20px;
-
-}
-
-#news-feed .publicacion {
-    align-items: center;
-    margin-right: 40px;
-    margin-top: 20px;
-    background-color: black;
-    color: #ffffff;
-}
