--- a/assets/styles/page404.css
+++ b/assets/styles/page404.css
@@ -1,6 +1,7 @@
 html {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Poppins', sans-serif;
+    
 }
 
 
@@ -74,13 +75,15 @@ html {
 
 /*ESTILOS DE BODY*/
 body { 
-    background-color: #000000ef;
+    background-color: #141414;
+    background-image: url(../images/abstract-red-light-silver-grey-metal-black-cyber-futuristic-technology-geometric-on-hexagon-mesh-design-modern-background-vector-transformed\ \(1\).jpeg);
     overflow-x: hidden;
     margin: 0;
     padding: 0;
     text-align: center;
-    /*background-image: url(../images/nes\(1\)\ \(1\).jpg);
-    /*background-size: cover; /* Ajusta el tamaño de fondo para cubrir completamente el elemento padre */
+    background-position: center;
+    /*background-image: url(../images/nes\(1\)\ \(1\).jpg);*/
+    background-size: cover; /*Ajusta el tamaño de fondo para cubrir completamente el elemento padre*/
     /*background-position: center center; /* Centra la imagen de fondo horizontal y verticalmente */
     /*background-repeat: no-repeat; /* Evita que la imagen de fondo se repita */
 }
@@ -105,7 +108,7 @@ body {
 
 .conten-error {
     font-size: 22px;
-    color: #777;
+    color: #ffffff;
     font-family: 'Montserrat';
     margin-top: 90px;
 }
@@ -191,42 +194,3 @@ body {
 /*}
 
 
-
-
-/* Estilo para el footer */
-footer {
-    background-color: #8a8a8a80;
-    padding: 10px;
-    margin-top: 20px;
-    bottom: 0;
-    width: 100%;
-}
-.footer-container { /* Contenedor principal del footer */
-    display: grid;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-.footerlogo {   /* Estilo para el logo en el footer */
-    width: 100px;
-    margin: 0 auto;
-}
-.divider {  /* Estilo para las divisiones entre el logo y los íconos */
-    margin-top: 10px;
-    width: 100%;
-    height: 5px;
-    background-color: rgb(0, 0, 0);
-}
-.social-icons { /* Estilo para los íconos de redes sociales */
-    margin-top: 20px;
-}
-.social-icon img {  /* Estilo para las imágenes de íconos de redes sociales */
-    width: 30px;
-    height: 30px;
-}
-.links a {  /* Estilo para los links del footer */
-    text-decoration: none;
-    color: black;
-    font-size: medium;
-    font-weight: bold;
-}
