--- a/assets/styles/contactanos.css
+++ b/assets/styles/contactanos.css
@@ -6,7 +6,7 @@ html {
 
 /* Estilos para el body */
 body {
-    background-image: url("../images/hexagon_background.png");
+    background-image: url("../images/hexagon_background_rotated.png");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -114,7 +114,7 @@ h1 {
 /* Estilo para el formulario de contacto */
 #form-contact-us {
     max-width: 600px;
-    min-height: 800px;
+    min-height: 722px;
     background-color: #141414;
     border-radius: 20px;
     padding: 30px 50px;
@@ -127,6 +127,22 @@ h1 {
     text-align: center;
     color: #ea2527;
 }
+.btn-outline-danger {
+    --bs-btn-color: #ea2527;
+    --bs-btn-border-color: #ea2527;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #ea2527;
+    --bs-btn-hover-border-color: #ea2527;
+    --bs-btn-focus-shadow-rgb: 220, 53, 69;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #ea2527;
+    --bs-btn-active-border-color: #ea2527;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #ea2527;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #ea2527;
+    --bs-gradient: none;
+}
 
 #input-comment {
     /* Estilo para el input de comentario */
@@ -134,7 +150,6 @@ h1 {
     min-height: 50px;
     padding: 30px 12px 16px 12px;
 }
-
 
 .form-check-input:checked {
     background-color: #ea2527;
