Se avanza en el dashboard

--- a/assets/styles/estilosDeDashBoard.css
+++ b/assets/styles/estilosDeDashBoard.css
@@ -121,6 +121,7 @@ button{
     padding: 10px; /* Espacio interno del navbar */
     width: 250px;
     height: 100%;
+    float: left;
 }
 
 
@@ -130,6 +131,7 @@ button{
     align-items: center;
     color: #ffffff;
     font-family: 'Montserrat';
+    height: 150%;
 }
 
 .dash-item a {
@@ -206,8 +208,52 @@ button{
 
 .escribir-publicacion{
     background-color: #000000;
-    width: 200px;
+    width: 400px;
+    height: 170px;
     border-radius: 10px;
    margin-top: 20px;
+ 
+   position: relative;
+margin-left: 45%;
+ 
+}
+
+
+
+.text-content{
+    width: 300px;
+    
+    border-radius: 20px;
+    background-color: #5d5d5d; 
+    right: 80%;
+    margin-bottom: 5%;
+    margin-left: 15%;
    
 }
+
+.img-perfil{
+    margin-left: 5%;
+    margin-top: 15%;
+}
+
+.bot1{
+    float: right;  
+    margin-right: 5%;
+   margin-bottom: 10%;
+    
+}
+
+.bot2{
+    background-color: #e42527;
+    border-radius: 10px;
+    border:none;
+    color: #ffffff;
+    
+
+}
+
+#img-bruja{
+    margin-top: 5%;
+}
+
+
