--- a/assets/styles/estilosDeDashBoard.css
+++ b/assets/styles/estilosDeDashBoard.css
@@ -255,12 +255,12 @@ button {
 
 .escribir-publicacion {
     background-color: #000000;
-    width: 400px;
+    max-width: 800px;
     height: 170px;
     border-radius: 10px;
     margin-top: 20px;
 
-    position: relative;
+   
     margin-left: 45%;
 
 }
@@ -274,7 +274,7 @@ button {
     background-color: #5d5d5d;
     right: 80%;
     margin-bottom: 5%;
-    margin-left: 15%;
+    
 
 }
 
