Actualizacion de personalizacion de registro

--- a/assets/styles/personalizaRegistro.css
+++ b/assets/styles/personalizaRegistro.css
@@ -141,32 +141,9 @@ body {
     text-align: center;
 }
 
-/* Clor del label */
-.form-floating label {
-    color: #5d5d5d;
-}
-
-/* Color de la línea al seleccionar el input */
-option:checked,
-option:hover {
-    background-color: red !important;
-}
-
-#options:focus {
-    background-color: #e42527;
-}
-
-/* Color del texto en las opciones */
-.form-select option {
-    color: #ffffff;
-}
-
-/* Color del fondo de las opciones al pasar el mouse */
-.form-select #input-game-category {
-    background-color: #5d5d5d;
-}
-
 option {
     background-color: #000000;
-    text-decoration: none;
+    text-decoration: none !important;
+    color: white;
 }
+
