--- a/assets/styles/contactanos.css
+++ b/assets/styles/contactanos.css
@@ -6,12 +6,13 @@ html {
 
 /* Estilos para el body */
 body {
-    background-image: url("../images/hexagon_background_rotated.png");
-    background-size: cover;
+   /* background-image: url("../images/hexagon_background_rotated.png");
+    background-size: cover;*/
     background-attachment: fixed;
     background-position: center;
     overflow-x: hidden;
     color: white;
+    background-color: #000000;
 }
 
 /* Estilos para los títulos */
@@ -24,7 +25,7 @@ h1 {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #000000;
+    background-color: #141414;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -100,13 +101,15 @@ h1 {
     border-radius: 20px;
     padding: 30px 50px;
     margin: 20px auto;
+    box-shadow: 0 0 10px #e42527;
+    margin-top: 50px;
 }
 
 #title-contact {
     font-weight: 600;
     font-size: 30px;
     text-align: center;
-    color: #ea2527;
+    color: #a8a8a8;
 }
 .btn-outline-danger {
     --bs-btn-color: #ea2527;
@@ -145,4 +148,9 @@ h1 {
 .form-floating label {
     /* Estilo para el label de los inputs */
     color: black;
+}
+
+.login-image{
+    text-align: center;
+
 }
