--- a/assets/styles/registrarUsusario.css
+++ b/assets/styles/registrarUsusario.css
@@ -5,17 +5,16 @@ html {
 }
 
 body {
-    background-image: url("../images/hexagon_background.png");
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center;
+    /*background-image: url("../images/hexagon_background.png");
+    background-size: cover;*/
     overflow-x: hidden;
     color: white;
+    background-color: #000
 }
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #000000;
+    background-color: #141414;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -92,13 +91,14 @@ body {
     border-radius: 20px;
     padding: 30px 50px;
     margin: 20px auto;
+    box-shadow: 0 0 10px #e42527;
 }
 
 #title-register {
     font-weight: 600;
     font-size: 30px;
     text-align: center;
-    color: #ea2527;
+    color: #a8a8a8;
 }
 
 .btn-outline-danger {
@@ -131,5 +131,8 @@ body {
     color: black;
 }
 
+.login-image{
+    text-align: center;
 
+}
 
