--- a/assets/styles/styleAboutUs.css
+++ b/assets/styles/styleAboutUs.css
@@ -6,7 +6,7 @@ html {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #000000;
+    background-color: #141414;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -74,7 +74,7 @@ html {
 
 
 body { /*ESTILOS DE BODY*/
-    background-color: #141414;
+    background-color: #000000;
     overflow-x: hidden;
 }
 
@@ -82,6 +82,12 @@ h1 {
     color: white;
     text-align: center;
     font-family: 'Poppins';
+    text-shadow:
+        0 0 10px #5d5d5d,
+        /* Sombra de color rojo */
+
+        0 0 10px #a8a8a8;
+    /* Sombra de color menos rojo :p */
 }
 
 
@@ -158,7 +164,7 @@ h1 {
 
 .container .card .face.face2 {
     position: relative;
-    background: rgb(0, 0, 0);
+    background: #141414;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -183,7 +189,7 @@ a {
 
 .container .card .face.face2 .content a {
     text-decoration: none;
-    color: black;
+    color: #141414;
     box-sizing: border-box;
     outline: 1px dashed #333;
     padding: 10px;
@@ -244,14 +250,19 @@ a {
 }
 
 h3 {
-    color: white;
+    color: #a8a8a8;
     font-family: 'Poppins';
     padding: 20px;
+    text-shadow:
+        0 0 10px #ff0000,
+        /* Sombra de color rojo */
+
+        0 0 10px #e42527;
 }
 
 .p-mision {
     text-align: justify;
-    color: white;
+    color: #8a8a8a;
     font-family: 'Montserrat';
     font-size: large;
     padding: 20px;
@@ -260,7 +271,7 @@ h3 {
 
 .p-vision {
     text-align: justify;
-    color: white;
+    color: #8a8a8a;
     font-family: 'Montserrat';
     font-size: large;
     padding: 20px;
