--- a/assets/styles/terminos.css
+++ b/assets/styles/terminos.css
@@ -6,7 +6,7 @@ html {
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #000000;
+    background-color: #141414;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -74,32 +74,38 @@ html {
 
 
 body {
-    background-color: #141414
+    background-color: #000;
+
 }
 
 h1 {
-    color: white;
+    color: #ffffff;
     text-align: center;
     font-family: 'Poppins';
+    text-shadow:
+    0 0 10px #5d5d5d,
+    /* Sombra de color rojo */
+
+    0 0 10px #a8a8a8;
 }
 
 h3{
     color: #a8a8a8;
-    text-align: center;
+    text-align: justify;
     font-family: 'Poppins';
 }
 
 p{
     color: #757575;
-    text-align: center;
+    text-align: justify;
     font-family: 'Montserrat';
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
 #inicial{
-    color: #a8a8a8;
-    text-align: center;
+    color: #757575;
+    text-align: justify;
     font-family: 'Montserrat';
     margin-top: 5px;
     margin-bottom: 5px;
@@ -108,10 +114,18 @@ p{
 h5{
     text-align: center;
     font-family: 'Poppins';
-    color: #ea252846;
+    color: #e82c2f6e;
 }
 
+.container{
+    border-radius: 30px;
 
+    margin-bottom: 30px;
+
+    background-color: #141414;
+    box-shadow: 0 0 10px #5d5d5d;
+
+}
 
 
 
