--- a/chat/style.css
+++ b/chat/style.css
@@ -9,15 +9,15 @@ html {
 	font-family: 'Montserrat', sans-serif;
 font-family: 'Poppins', sans-serif;
 }
- 
+
 body{
-	background-color: #141414 !important;
+	background-color: #000 !important;
 	
 }
 
 /* Barra de navegación */
 .custom-navbar {
-    background-color: #000000;
+    background-color: #141414;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -87,28 +87,28 @@ form, p, span {
 	color: #a8a8a8;
 	margin:0;
 	padding:0; }
- 
+
 input { font:20px;
 }
- 
+
 a {
 	color:#ea2425 !important;
 	text-decoration:none !important; }
- 
+
 	a:hover { text-decoration:underline; }
- 
+
 #wrapper, #loginform {
 	margin:0 auto;
 	padding-bottom:25px;
-	background:#000000;
+	background:#141414;
 	width:604px;
 	border:2px solid #000000; 
 	box-shadow: 0 0 10px #e42527;}
- 
+
 #loginform { padding-top:25px; }
- 
+
 	#loginform p { margin: 10px; }
- 
+
 #chatbox {
 	text-align:left;
 	margin:0 auto;
@@ -117,30 +117,31 @@ a {
 	background:#141414;
 	height:470px;
 	width:530px;
-	border:1px solid #000000;
+	border:1px solid #141414;
 	box-shadow: 0 0 10px #e42527;
 	overflow:auto; }
- 
+
 #usermsg {
 	width:575px;
-	border:1px solid #f0acae; 
+	border:1px solid #d89898; 
 	align-items: center;
 }
 	
- 
+
 #submit { width: 100px; }
- 
+
 .error { color: #ff0000; }
- 
+
 #menu { padding:12.5px 25px 12.5px 25px; }
- 
+
 .welcome { float:left; }
- 
+
 .logout { float:right; }
- 
+
 .msgln { margin:0 0 2px 0; }
- 
+
 .form-control{
- background-color: #000000 !important;
- color: #a8a8a8 !important;
+    background-color: #141414 !important;
+color: #a8a8a8 !important;
+border:1px solid #d89898 !important; 
 }
